Module_6/Task5/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  labels:
    app: backend
spec:
  serviceAccountName: backend-sa
  containers:
    - name: backend
      image: httpd:latest
      ports:
        - containerPort: 80
