Module_6/Task5/database.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database
  labels:
    app: database
spec:
  serviceAccountName: database-sa
  containers:
    - name: database
      image: mysql:latest
      ports:
        - containerPort: 3306
