Module_6/Task5/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  serviceAccountName: frontend-sa
  containers:
    - name: frontend
      image: nginx:latest
      ports:
        - containerPort: 80
